# Apothema

./: .gitignore  Cargo.toml  Readme.md
src/: cube.rs  main.rs  move_tables.rs
src/cube/: benchmarks.rs  cube_corner_encoding.rs  cube_display.rs  cube_edge_encoding.rs  cube_encoding.rs  cube_encoding_tests.rs  cube_encoding_ud_slice.rs  cube_impl.rs  cube_sanity_check.rs  cube_tests.rs  cube_types.rs  mod.rs  move_sequence_impl.rs  move_sequence_types.rs  move_sequence_utils.rs  move_table.rs  move_utils.rs  print_move_table.rs
src/prunning/: mod.rs  table_generator.rs  table_store.rs  table_type.rs
src/search/: bfs.rs  bfs_tests.rs  mod.rs
