[package]
name = "apothema"
version = "0.1.0"
authors = ["h3nnn4n <uber.renan@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
enum_primitive = "0.1.1"
phf = { version = "0.7.24", features = ["macros"] }
phf_codegen = "0.7.24"
test-case-derive = "0.2.1"
rand = "0.6.5"
serde = "1.0.92"
serde_json = "1.0.39"
bincode = "1.1.4"
